force-app/main/default/objects/Campaign_Hosts__c/Campaign_Hosts__c.object-meta.xml
<CustomObject>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
Object that holds the link between host and member.</description>
    <label>Campaign Hosts</label>
    <nameField>
        <label>Campaign Hosts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Hosts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>