force-app/main/default/objects/Campaign_Hosts__c/fields/Bank_Contact__c.field-meta.xml
<CustomField>
    <fullName>Bank_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
Look-up to Bank Contacts</description>
    <label>Bank Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaign Hosts</relationshipLabel>
    <relationshipName>Campaign_Hosts</relationshipName>
    <type>Lookup</type>
</CustomField>