force-app/main/default/objects/Campaign_Hosts__c/fields/Campaign_Member_Host__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Host__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
Look-up to &quot;Campaign member host&quot; object</description>
    <label>Campaign Member Host</label>
    <referenceTo>Campaign_Member_Host__c</referenceTo>
    <relationshipLabel>Campaign Hosts</relationshipLabel>
    <relationshipName>Campaign_Hosts</relationshipName>
    <type>Lookup</type>
</CustomField>