force-app/main/default/objects/Campaign_Hosts__c/fields/Host_Id__c.field-meta.xml
<CustomField>
    <fullName>Host_Id__c</fullName>
    <description>Case#1168 - Rudolf Niehaus - 11/2011
The ID of the Member Id + Bank contact Id  to be used as an External ID for upserts</description>
    <externalId>true</externalId>
    <label>Host Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>